src/test/ui/consts/const-eval/panic-assoc-never-type.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/panic-assoc-never-type.rs:10:21
   |
LL |     const VOID: ! = panic!();
   |                     ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/panic-assoc-never-type.rs:10:21
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
